--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container" id="container">
         <div class="form-container register-container">
-            <form action="https://lustrous-heliotrope-4ad62b.netlify.app">
+            <form action="https://strong-frangollo-094f02.netlify.app/">
                 <h1>Register</h1>
                 <input type="text" placeholder="Name">
                 <input type="email" placeholder="Email">
@@ -31,7 +31,7 @@
             </form>
         </div>
         <div class="form-container login-container">
-            <form action="https://lustrous-heliotrope-4ad62b.netlify.app">
+            <form action="https://strong-frangollo-094f02.netlify.app/">
                 <h1>Login</h1>
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
